--- a/extension/popup.css
+++ b/extension/popup.css
@@ -599,17 +599,7 @@ button#connect:active {
   max-height: 60px;
   opacity: 1;
   overflow: hidden;
-  transition: max-height var(--transition-duration) ease-out,
-              opacity var(--transition-duration) ease-out,
-              padding var(--transition-duration) ease-out;
-}
-
-.connected-tab-item.leaving,
-.connected-tab-item.entering {
-  max-height: 0;
-  opacity: 0;
-  padding-top: 0;
-  padding-bottom: 0;
+  transition: opacity var(--transition-duration) ease-out;
 }
 
 .connected-tab-port {
